name:           dhall-flycheck
version:        0.1.0
build-type:     Simple
cabal-version:  >= 1.10
license:        BSD3
license-file:   LICENSE
                
library
  exposed-modules:
      Dhall.Flycheck
      Dhall.Flycheck.ImportLocation
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base
    , aeson
    , bytestring
    , containers
    , dhall
    , exceptions
    , lens-family-core
    , megaparsec == 8.*
    , mtl
    , prettyprinter
    , text
    , transformers
  default-language: Haskell2010

executable dhall-flycheck
  main-is: Main.hs
  ghc-options: -Wall -Wextra
  build-depends:
      base
    , dhall-flycheck
  default-language: Haskell2010
